Continued reorganising the directory structure.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -174,8 +174,8 @@
     <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyFollowPath.cs" />
     <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToBase.cs" />
     <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToPlaceable.cs" />
-    <Compile Include="Common\Messages\EntitySpawnMessage.cs" />
-    <Compile Include="Common\Messages\EntityPreDestructionMessage.cs" />
+    <Compile Include="GameModel\Entities\Messages\EntitySpawnMessage.cs" />
+    <Compile Include="GameModel\Entities\Messages\EntityPreDestructionMessage.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
     <Compile Include="Common\Messages\MessageRule.cs" />
     <Compile Include="Common\Messages\MessageFilterFactory.cs" />
@@ -191,7 +191,7 @@
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Blueprints\MobileEntityBlueprint.cs" />
     <Compile Include="GameModel\Blueprints\SpawnerBlueprint.cs" />
-    <Compile Include="Common\Entities\EntityDestructionManager.cs" />
+    <Compile Include="GameModel\Entities\Lifetime\EntityDestructionManager.cs" />
     <Compile Include="GameModel\Entities\Core\EntityNavigationMap.cs" />
     <Compile Include="GameModel\Entities\Core\EntityUtil.cs" />
     <Compile Include="GameModel\Entities\Core\IMobileEntity.cs" />
@@ -200,7 +200,7 @@
     <Compile Include="GameModel\Entities\Core\PlaceableEntity.cs" />
     <Compile Include="GameModel\Entities\Custom\Spawner.cs" />
     <Compile Include="GameModel\Entities\Custom\Walker.cs" />
-    <Compile Include="GameModel\FSMs\PlaceableEntityInDestructionState.cs" />
+    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityInDestructionState.cs" />
     <Compile Include="GameModel\Entities\Core\IPlaceableEntity.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
     <Compile Include="GameModel\Navigation\NavigationMap.cs" />
@@ -211,7 +211,7 @@
     <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
     <Compile Include="GameModel\Matchmaking\Resource.cs" />
-    <Compile Include="Common\Messages\EntityDestructionMessage.cs" />
+    <Compile Include="GameModel\Entities\Messages\EntityDestructionMessage.cs" />
     <Compile Include="GameModel\Entities\Core\PlayingArea.cs" />
     <Compile Include="GameModel\Entities\Core\EntityNavigationNode.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
@@ -219,18 +219,18 @@
     <Compile Include="GameModel\Entities\Custom\Building.cs" />
     <Compile Include="GameModel\Entities\Custom\City.cs" />
     <Compile Include="GameModel\Entities\Custom\World.cs" />
-    <Compile Include="GameModel\FSMs\PlaceableEntityInConstructionState.cs" />
-    <Compile Include="GameModel\FSMs\PlaceableEntityOperatingState.cs" />
+    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityInConstructionState.cs" />
+    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityOperatingState.cs" />
     <Compile Include="UI\GameViewState.cs" />
     <Compile Include="UI\Tools\EntityDeletionTool.cs" />
     <Compile Include="UI\Tools\EntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ITool.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
     <Compile Include="Common\FSMs\IFSMState.cs" />
-    <Compile Include="GameModel\FSMs\PlaceableEntityStateID.cs" />
+    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="GameModel\Blueprints\PlaceableEntityBlueprint.cs" />
-    <Compile Include="GameModel\FSMs\PlaceableEntityFSM.cs" />
+    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityFSM.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
     <Compile Include="UI\CompositeVisibleEntity.cs" />
