--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -170,12 +170,12 @@
     <Compile Include="Common\Entities\INamedEntity.cs" />
     <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
-    <Compile Include="GameModel\Entities\Core\IRoadSegment.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyFollowPath.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToBase.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToPlaceable.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntitySpawnMessage.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntityPreDestructionMessage.cs" />
+    <Compile Include="GameModel\Core\IRoadSegment.cs" />
+    <Compile Include="GameModel\MovementStrategies\MovementStrategyFollowPath.cs" />
+    <Compile Include="GameModel\MovementStrategies\MovementStrategyGoToBase.cs" />
+    <Compile Include="GameModel\MovementStrategies\MovementStrategyGoToPlaceable.cs" />
+    <Compile Include="GameModel\Messages\EntitySpawnMessage.cs" />
+    <Compile Include="GameModel\Messages\EntityPreDestructionMessage.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
     <Compile Include="Common\Messages\MessageRule.cs" />
     <Compile Include="Common\Messages\MessageFilterFactory.cs" />
@@ -191,46 +191,46 @@
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Blueprints\MobileEntityBlueprint.cs" />
     <Compile Include="GameModel\Blueprints\SpawnerBlueprint.cs" />
-    <Compile Include="GameModel\Entities\Lifetime\EntityDestructionManager.cs" />
-    <Compile Include="GameModel\Entities\Core\EntityNavigationMap.cs" />
-    <Compile Include="GameModel\Entities\Core\EntityUtil.cs" />
-    <Compile Include="GameModel\Entities\Core\IMobileEntity.cs" />
-    <Compile Include="GameModel\Entities\Core\IMovementStrategy.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToPosition.cs" />
-    <Compile Include="GameModel\Entities\Core\PlaceableEntity.cs" />
-    <Compile Include="GameModel\Entities\Custom\Spawner.cs" />
-    <Compile Include="GameModel\Entities\Custom\Walker.cs" />
-    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityInDestructionState.cs" />
-    <Compile Include="GameModel\Entities\Core\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\Lifetime\EntityDestructionManager.cs" />
+    <Compile Include="GameModel\Core\EntityNavigationMap.cs" />
+    <Compile Include="GameModel\Core\EntityUtil.cs" />
+    <Compile Include="GameModel\Core\IMobileEntity.cs" />
+    <Compile Include="GameModel\Core\IMovementStrategy.cs" />
+    <Compile Include="GameModel\MovementStrategies\MovementStrategyGoToPosition.cs" />
+    <Compile Include="GameModel\Core\PlaceableEntity.cs" />
+    <Compile Include="GameModel\Entities\Spawner.cs" />
+    <Compile Include="GameModel\Entities\Walker.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityInDestructionState.cs" />
+    <Compile Include="GameModel\Core\IPlaceableEntity.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
     <Compile Include="GameModel\Navigation\NavigationMap.cs" />
-    <Compile Include="GameModel\Entities\Core\IPlacementStrategy.cs" />
-    <Compile Include="GameModel\Entities\Core\IPlayingArea.cs" />
+    <Compile Include="GameModel\PlacementStrategies\IPlacementStrategy.cs" />
+    <Compile Include="GameModel\Core\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceMatchmaker.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
     <Compile Include="GameModel\Matchmaking\Resource.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntityDestructionMessage.cs" />
-    <Compile Include="GameModel\Entities\Core\PlayingArea.cs" />
-    <Compile Include="GameModel\Entities\Core\EntityNavigationNode.cs" />
+    <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
+    <Compile Include="GameModel\Core\PlayingArea.cs" />
+    <Compile Include="GameModel\Core\EntityNavigationNode.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
-    <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\Custom\Building.cs" />
-    <Compile Include="GameModel\Entities\Custom\City.cs" />
-    <Compile Include="GameModel\Entities\Custom\World.cs" />
-    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityInConstructionState.cs" />
-    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityOperatingState.cs" />
+    <Compile Include="GameModel\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
+    <Compile Include="GameModel\Entities\Building.cs" />
+    <Compile Include="GameModel\Entities\City.cs" />
+    <Compile Include="GameModel\Entities\World.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityInConstructionState.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityOperatingState.cs" />
     <Compile Include="UI\GameViewState.cs" />
     <Compile Include="UI\Tools\EntityDeletionTool.cs" />
     <Compile Include="UI\Tools\EntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ITool.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
     <Compile Include="Common\FSMs\IFSMState.cs" />
-    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityStateID.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="GameModel\Blueprints\PlaceableEntityBlueprint.cs" />
-    <Compile Include="GameModel\Entities\FSMs\PlaceableEntityFSM.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityFSM.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
     <Compile Include="UI\CompositeVisibleEntity.cs" />
@@ -240,9 +240,9 @@
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="GameModel\Entities\Custom\House.cs" />
+    <Compile Include="GameModel\Entities\House.cs" />
     <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
-    <Compile Include="GameModel\Entities\Custom\RoadSegment.cs" />
+    <Compile Include="GameModel\Entities\RoadSegment.cs" />
     <Compile Include="Common\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="Common\Terrains\QuadtreeNode.cs" />
     <Compile Include="Common\Terrains\Terrain.cs" />
