--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -115,9 +115,11 @@
     <Compile Include="Common\Entities\EntityComponent.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
+    <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="UI\MouseEventManager.cs" />
-    <Compile Include="UI\Renderer.cs" />
+    <Compile Include="Common\Persistence\PropertyPersister.cs" />
+    <Compile Include="Common\UI\MouseEventManager.cs" />
+    <Compile Include="Common\UI\Renderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
@@ -133,12 +135,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Common\Persistence\" />
     <Folder Include="GameModel\Entities\Components\External\" />
     <Folder Include="GameModel\Entities\Components\Internal\" />
-    <Folder Include="UI\Entities\Components\Interaction\" />
-    <Folder Include="UI\Entities\Components\Rendering\" />
-    <Folder Include="UI\Persistence\" />
+    <Folder Include="GameUI\Entities\Components\Interaction\" />
+    <Folder Include="GameUI\Entities\Components\Rendering\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
