Migrated some of the persistence tests across from game1666proto4.

--- a/game1666/game1666Test/game1666Test.csproj
+++ b/game1666/game1666Test/game1666Test.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Common\Entities\EntityTest.cs" />
     <Compile Include="Common\Maths\Vector2iTest.cs" />
+    <Compile Include="Common\Persistence\PropertyPersisterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
