--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
+    <Compile Include="Common\Persistence\ObjectPersister.cs" />
     <Compile Include="Common\Persistence\PropertyPersister.cs" />
     <Compile Include="Common\UI\MouseEventManager.cs" />
     <Compile Include="Common\UI\Renderer.cs" />
