--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Common\Entities\EntityComponent.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
+    <Compile Include="Common\Entities\Components\TestComponent.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
     <Compile Include="Common\Persistence\ObjectPersister.cs" />
