--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -123,6 +123,8 @@
     <Compile Include="Common\Persistence\PropertyPersister.cs" />
     <Compile Include="Common\UI\MouseEventManager.cs" />
     <Compile Include="Common\UI\Renderer.cs" />
+    <Compile Include="GameModel\Entities\Components\Internal\PlayingAreaComponent.cs" />
+    <Compile Include="GameModel\Entities\EntityFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
@@ -139,7 +141,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GameModel\Entities\Components\External\" />
-    <Folder Include="GameModel\Entities\Components\Internal\" />
     <Folder Include="GameUI\Entities\Components\Interaction\" />
     <Folder Include="GameUI\Entities\Components\Rendering\" />
   </ItemGroup>
