--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -116,7 +116,10 @@
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="Common\Entities\Components\TestComponent.cs" />
+    <Compile Include="Common\Maths\Constants.cs" />
+    <Compile Include="Common\Maths\MathUtil.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
+    <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
     <Compile Include="Common\Persistence\IPersistableObject.cs" />
     <Compile Include="Common\Persistence\ObjectPersister.cs" />
