--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -131,6 +131,8 @@
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
     <Compile Include="GameModel\Terrains\Terrain.cs" />
+    <Compile Include="GameUI\Entities\Components\Rendering\CompositeRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Rendering\RenderingComponent.cs" />
     <Compile Include="GameUI\Entities\UIEntity.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,7 +152,6 @@
   <ItemGroup>
     <Folder Include="GameModel\Entities\Components\External\" />
     <Folder Include="GameUI\Entities\Components\Interaction\" />
-    <Folder Include="GameUI\Entities\Components\Rendering\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
