--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -111,8 +111,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Entities\BasicEntity.cs" />
     <Compile Include="Common\Entities\Entity.cs" />
+    <Compile Include="Common\Entities\BasicEntityComponent.cs" />
     <Compile Include="Common\Entities\EntityComponent.cs" />
+    <Compile Include="Common\Entities\IBasicEntity.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="Common\Entities\Components\TestComponent.cs" />
@@ -133,7 +136,9 @@
     <Compile Include="GameModel\Terrains\Terrain.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\CompositeRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\RenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\UIEntity.cs" />
+    <Compile Include="GameUI\Entities\UIEntityComponent.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
