Started work on PlayRenderingComponent.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Common\Persistence\IPersistableObject.cs" />
     <Compile Include="Common\Persistence\ObjectPersister.cs" />
     <Compile Include="Common\Persistence\PropertyPersister.cs" />
+    <Compile Include="Common\UI\Camera.cs" />
     <Compile Include="Common\UI\MouseEventManager.cs" />
     <Compile Include="Common\UI\Renderer.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\PlayingAreaComponent.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="GameUI\Entities\Components\Interaction\CompositeInteractionComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Interaction\InteractionComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\CompositeRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Rendering\PlayRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\RenderingComponent.cs" />
     <Compile Include="GameUI\Entities\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\UIEntity.cs" />
