--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -130,7 +130,9 @@
     <Compile Include="Common\UI\Camera.cs" />
     <Compile Include="Common\UI\MouseEventManager.cs" />
     <Compile Include="Common\UI\Renderer.cs" />
+    <Compile Include="GameModel\Entities\Components\External\ExternalComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\InternalComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\External\PlacementComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\PlayingAreaComponent.cs" />
     <Compile Include="GameModel\Entities\EntityFactory.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
@@ -162,9 +164,7 @@
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GameModel\Entities\Components\External\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
