--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -130,7 +130,10 @@
     <Compile Include="Common\UI\Camera.cs" />
     <Compile Include="Common\UI\MouseEventManager.cs" />
     <Compile Include="Common\UI\Renderer.cs" />
+    <Compile Include="GameModel\Blueprints\Blueprint.cs" />
+    <Compile Include="GameModel\Blueprints\BlueprintManager.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
+    <Compile Include="GameModel\Blueprints\PlacementBlueprint.cs" />
     <Compile Include="GameModel\Entities\Components\External\ExternalComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\InternalComponent.cs" />
     <Compile Include="GameModel\Entities\Components\External\PlacementComponent.cs" />
