Started getting placeable entity rendering working again.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -149,9 +149,11 @@
     <Compile Include="GameUI\Entities\Components\Interaction\CompositeInteractionComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Interaction\InteractionComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Interaction\PlayInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\CompositeRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Rendering\CompositeControlRenderingComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\Rendering\EntityRenderingComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\Rendering\PlaceableEntityRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\PlayRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\RenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Rendering\ControlRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\SidebarRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\UIEntityComponentUtil.cs" />
     <Compile Include="GameUI\Entities\IUIEntity.cs" />
