Did a bit of structural reorganisation.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -115,11 +115,11 @@
     <Compile Include="Common\Messaging\MessageFilterFactory.cs" />
     <Compile Include="Common\Messaging\MessageRule.cs" />
     <Compile Include="Common\Messaging\MessageSystem.cs" />
-    <Compile Include="GameModel\Entities\ModelEntity.cs" />
+    <Compile Include="GameModel\Entities\Base\ModelEntity.cs" />
     <Compile Include="Common\Entities\Entity.cs" />
-    <Compile Include="GameModel\Entities\ModelEntityComponent.cs" />
+    <Compile Include="GameModel\Entities\Base\ModelEntityComponent.cs" />
     <Compile Include="Common\Entities\EntityComponent.cs" />
-    <Compile Include="GameModel\Entities\IModelEntity.cs" />
+    <Compile Include="GameModel\Entities\Base\IModelEntity.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Test\TestComponent.cs" />
@@ -155,10 +155,10 @@
     <Compile Include="GameUI\Entities\Components\Rendering\PlayRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\ControlRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Rendering\SidebarRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\UIEntityComponentUtil.cs" />
-    <Compile Include="GameUI\Entities\IUIEntity.cs" />
-    <Compile Include="GameUI\Entities\UIEntity.cs" />
-    <Compile Include="GameUI\Entities\UIEntityComponent.cs" />
+    <Compile Include="GameUI\Entities\Base\UIEntityComponentUtil.cs" />
+    <Compile Include="GameUI\Entities\Base\IUIEntity.cs" />
+    <Compile Include="GameUI\Entities\Base\UIEntity.cs" />
+    <Compile Include="GameUI\Entities\Base\UIEntityComponent.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
