--- a/game1666/game1666Test/game1666Test.csproj
+++ b/game1666/game1666Test/game1666Test.csproj
@@ -52,6 +52,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ADTs\PriorityQueueTest.cs" />
     <Compile Include="Common\Entities\EntityTest.cs" />
     <Compile Include="Common\Maths\TriangleTest.cs" />
     <Compile Include="Common\Maths\Vector2iTest.cs" />
