--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -112,6 +112,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ADTs\PriorityQueue.cs" />
+    <Compile Include="Common\AStar\AStarNode.cs" />
+    <Compile Include="Common\AStar\AStarSearcher.cs" />
     <Compile Include="Common\Messaging\IMessage.cs" />
     <Compile Include="Common\Messaging\MessageFilterFactory.cs" />
     <Compile Include="Common\Messaging\MessageRule.cs" />
