--- a/game1666/game1666Test/game1666Test.csproj
+++ b/game1666/game1666Test/game1666Test.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ADTs\PriorityQueueTest.cs" />
+    <Compile Include="Common\AStar\AStarSearcherTest.cs" />
     <Compile Include="Common\Entities\EntityTest.cs" />
     <Compile Include="Common\Maths\TriangleTest.cs" />
     <Compile Include="Common\Maths\Vector2iTest.cs" />
