Moved Footprint to get rid of a mutual dependency between the Blueprints and PlacementStrategies namespaces.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -140,7 +140,7 @@
     <Compile Include="Common\UI\Renderer.cs" />
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Blueprints\BlueprintManager.cs" />
-    <Compile Include="GameModel\Blueprints\Footprint.cs" />
+    <Compile Include="GameModel\Entities\PlacementStrategies\Footprint.cs" />
     <Compile Include="GameModel\Blueprints\PlacementBlueprint.cs" />
     <Compile Include="GameModel\Entities\Components\External\ExternalComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\InternalComponent.cs" />
