--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -172,6 +172,8 @@
     <Compile Include="GameUI\Entities\Base\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntityComponent.cs" />
+    <Compile Include="GameUI\Entities\Concrete\PlayViewer.cs" />
+    <Compile Include="GameUI\Entities\Concrete\SidebarViewer.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
