Continued working on the sidebar.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -160,19 +160,23 @@
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
     <Compile Include="GameModel\Terrains\Terrain.cs" />
-    <Compile Include="GameUI\Entities\Components\Interaction\CompositeInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Interaction\InteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Interaction\PlayInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\CompositeControlRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\PlayRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\ControlRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Rendering\SidebarRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Button\ButtonControl.cs" />
+    <Compile Include="GameUI\Entities\Components\Button\ButtonInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Common\CompositeInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Common\InteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Play\PlayInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Button\ButtonRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Common\CompositeControlRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Play\PlayRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Common\ControlRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Sidebar\SidebarRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntityComponentUtil.cs" />
     <Compile Include="GameUI\Entities\Base\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntityComponent.cs" />
-    <Compile Include="GameUI\Entities\Concrete\PlayViewer.cs" />
-    <Compile Include="GameUI\Entities\Concrete\SidebarViewer.cs" />
+    <Compile Include="GameUI\Entities\Components\Play\PlayStateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Sidebar\SidebarStateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\Common\StateComponent.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
