--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -183,7 +183,9 @@
     <Compile Include="GameUI\Entities\Components\Sidebar\SidebarStateComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Common\StateComponent.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
+    <Compile Include="GameUI\Tools\EntityPlacementTool.cs" />
     <Compile Include="GameUI\Tools\ITool.cs" />
+    <Compile Include="GameUI\Tools\ToolUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
