--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -152,11 +152,11 @@
     <Compile Include="GameModel\Entities\Components\External\PlaceableComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Internal\PlayingAreaComponent.cs" />
     <Compile Include="GameModel\Entities\Lifetime\ModelEntityDestructionManager.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntityDestructionMessage.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntityPreDestructionMessage.cs" />
-    <Compile Include="GameModel\Entities\Messages\EntitySpawnMessage.cs" />
-    <Compile Include="GameModel\Entities\Navigation\EntityNavigationMap.cs" />
-    <Compile Include="GameModel\Entities\Navigation\EntityNavigationNode.cs" />
+    <Compile Include="GameModel\Entities\Messages\ModelEntityDestructionMessage.cs" />
+    <Compile Include="GameModel\Entities\Messages\ModelEntityPreDestructionMessage.cs" />
+    <Compile Include="GameModel\Entities\Messages\ModelEntitySpawnMessage.cs" />
+    <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationMap.cs" />
+    <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationNode.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
     <Compile Include="GameModel\Entities\Util\ModelContextExtensions.cs" />
